test/classes/initializers/generics/phase1/unorderedFields.good
unorderedFields.chpl:6: In initializer:
unorderedFields.chpl:9: error: multiple initializations of field "f2"
